<resources>
    <string name="app_name">Demo</string>
    <string name="header_time_default">11:36 AM\n25/08/2010</string>
    <string name="header_title_default_1">Trung tâm sát hạch và đào tạo</string>
    <string name="header_title_default_2">Số 1 hà nội</string>
    <string name="name_user_title">Họ và tên: \u0020</string>
    <string name="name_user_default">Nguyễn Văn A</string>
    <string name="year_of_birth_title">Năm sinh: \u0020</string>
    <string name="year_of_birth_default">11/11/2021</string>
    <string name="cccd">CMT/CCCD: \u0020</string>
    <string name="cccd_data">01213124234355</string>
    <string name="number">Số BD: \u0020</string>
    <string name="rank">Hạng: \u0020</string>
    <string name="exam">Kì SH: \u0020</string>
    <string name="minus_point">Điểm trừ trong bài thi: \u0020</string>
    <string name="driving_no_value_exp">---</string>

    <!-- Speed unit: kilometers per hour -->
    <string name="unit_kmh">km/h</string>
    <!-- Speed unit: miles per hour -->
    <string name="unit_mph">mi/h</string>
    <!-- Speed unit: meters per second -->
    <string name="unit_ms">m/s</string>
    <!-- Speed unit: feet per second -->
    <string name="unit_fts">ft/s</string>
</resources>