<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <merge>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_8"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_136"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/dp_88"
                    android:layout_height="@dimen/dp_136"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_avatar" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_136"
                    android:layout_marginStart="@dimen/dp_8"
                    android:layout_marginEnd="@dimen/dp_8"
                    android:orientation="vertical"
                    android:weightSum="5">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@color/bg_hover_dark"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingHorizontal="@dimen/dp_8">

                        <com.hjq.demo.widget.AppTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name_user_title"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp_10" />

                        <com.hjq.demo.widget.AppTextViewBold
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name_user_default"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp_10" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingHorizontal="@dimen/dp_8">

                        <com.hjq.demo.widget.AppTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/year_of_birth_title"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp_10" />

                        <com.hjq.demo.widget.AppTextViewBold
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/year_of_birth_default"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp_10" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@color/bg_hover_dark"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingHorizontal="@dimen/dp_8">

                        <com.hjq.demo.widget.AppTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cccd"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp_10" />

                        <com.hjq.demo.widget.AppTextViewBold
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cccd_data"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp_10" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingHorizontal="@dimen/dp_8">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <com.hjq.demo.widget.AppTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/number"
                                android:textAllCaps="true"
                                android:textColor="@color/white"
                                android:textSize="@dimen/sp_10" />

                            <com.hjq.demo.widget.AppTextViewBold
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="05"
                                android:textAllCaps="true"
                                android:textColor="@color/white"
                                android:textSize="@dimen/sp_10" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <com.hjq.demo.widget.AppTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/rank"
                                android:textAllCaps="true"
                                android:textColor="@color/white"
                                android:textSize="@dimen/sp_10" />

                            <com.hjq.demo.widget.AppTextViewBold
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="B2"
                                android:textAllCaps="true"
                                android:textColor="@color/white"
                                android:textSize="@dimen/sp_10" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@color/bg_hover_dark"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingHorizontal="@dimen/dp_8">

                        <com.hjq.demo.widget.AppTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/exam"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp_10" />

                        <com.hjq.demo.widget.AppTextViewBold
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="134324325"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp_10" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_136"
                android:layout_weight="1"
                android:background="@drawable/bg_border"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/dp_4"
                    android:layout_marginBottom="@dimen/dp_4"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <com.kofigyan.stateprogressbar.StateProgressBar
                        android:id="@+id/stateProgressBar1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:spb_stateSize="@dimen/dp_16"
                        app:spb_stateTextSize="@dimen/sp_10"
                        app:spb_stateDescriptionSize="@dimen/sp_10"
                        app:spb_descriptionTopSpaceIncrementer="@dimen/dp_4"
                        app:spb_currentStateNumber="3"
                        app:spb_maxStateNumber="6"
                        app:spb_stateBackgroundColor="#BDBDBD"
                        app:spb_stateForegroundColor="#009688"
                        app:spb_stateNumberBackgroundColor="#808080"
                        app:spb_stateNumberForegroundColor="#eeeeee"
                        app:spb_currentStateDescriptionColor="#F44336"
                        app:spb_stateDescriptionColor="#808080"
                        app:spb_animateToCurrentProgressState="true"
                        app:spb_checkStateCompleted="true"/>

                    <com.kofigyan.stateprogressbar.StateProgressBar
                        android:id="@+id/stateProgressBar2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:spb_stateSize="@dimen/dp_16"
                        app:spb_stateTextSize="@dimen/sp_10"
                        app:spb_stateDescriptionSize="@dimen/sp_10"
                        app:spb_descriptionTopSpaceIncrementer="@dimen/dp_4"
                        app:spb_maxStateNumber="6"
                        app:spb_currentStateNumber="0"
                        app:spb_textStartNumber="7"
                        app:spb_stateBackgroundColor="#BDBDBD"
                        app:spb_stateForegroundColor="#009688"
                        app:spb_stateNumberBackgroundColor="#808080"
                        app:spb_stateNumberForegroundColor="#eeeeee"
                        app:spb_currentStateDescriptionColor="@color/red"
                        app:spb_stateDescriptionColor="#808080"
                        app:spb_animateToCurrentProgressState="true"
                        app:spb_checkStateCompleted="true"/>

                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.hjq.demo.widget.AppTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Bài thi: "
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_10" />

                    <com.hjq.demo.widget.AppTextViewBold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nhường đường cho người đi bộ"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_10" />

                </LinearLayout>


                <LinearLayout
                    android:layout_marginTop="@dimen/dp_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/dp_8">

                    <com.hjq.demo.widget.AppTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Thời gian thi: "
                        android:layout_gravity="center"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_10" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="@dimen/dp_56"
                            android:gravity="center"
                            android:background="@drawable/bg_center_indicator"
                            android:layout_height="@dimen/dp_24">

                            <com.hjq.demo.widget.AppTextLedNumber
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="01:22"
                                android:gravity="center"
                                android:textColor="@color/red"
                                android:textSize="@dimen/sp_20" />

                        </LinearLayout>



                        <com.hjq.demo.widget.AppTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" s "
                            android:layout_gravity="center"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp_10" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.hjq.demo.widget.AppTextViewBold
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="/ 05:00"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp_12" />

                        <com.hjq.demo.widget.AppTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" s"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp_10" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/dp_8">

                    <com.hjq.demo.widget.AppTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/minus_point"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_10" />

                    <com.hjq.demo.widget.AppTextViewBold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="06"
                        android:textAllCaps="true"
                        android:textColor="@color/red"
                        android:textSize="@dimen/sp_14" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </merge>
</layout>