<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <merge>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/dp_80"
                android:layout_height="@dimen/dp_24"
                android:backgroundTint="@color/bg_header"
                android:foreground="@drawable/card_foreground"
                app:cardCornerRadius="@dimen/dp_4">

                <com.hjq.demo.widget.AppTextViewBold
                    android:id="@+id/tvTimeHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/header_time_default"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_10" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_24"
                android:layout_marginHorizontal="@dimen/dp_8"
                android:layout_weight="1"
                android:backgroundTint="@color/bg_header"
                android:foreground="@drawable/card_foreground"
                app:cardCornerRadius="@dimen/dp_4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:padding="@dimen/dp_4"
                        android:layout_marginStart="@dimen/dp_8"
                        android:layout_height="@dimen/dp_24"
                        android:src="@drawable/ic_logo_company" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"

                        android:orientation="vertical">

                        <com.hjq.demo.widget.AppTextViewBold
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/header_title_default_1"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sp_10" />

                        <com.hjq.demo.widget.AppTextViewBold
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/header_title_default_2"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sp_10" />
                    </LinearLayout>


                </LinearLayout>


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/dp_120"
                android:layout_height="@dimen/dp_24"
                android:backgroundTint="@color/bg_header"
                android:foreground="@drawable/card_foreground"
                app:cardCornerRadius="@dimen/dp_4">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <com.hjq.demo.widget.AppTextViewBold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="SA HÌNH"
                        android:textAllCaps="true"
                        android:textColor="@color/red"
                        android:textSize="@dimen/sp_10" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <com.hjq.demo.widget.AppTextViewBold
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Xe số: "
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sp_10" />

                        <com.hjq.demo.widget.AppTextViewBold
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="07"
                            android:textAllCaps="true"
                            android:textColor="@color/red"
                            android:textSize="@dimen/sp_10" />
                    </LinearLayout>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </merge>
</layout>